--- a/vars.scss
+++ b/vars.scss
@@ -1,4 +1,4 @@
 $background-color: #171819;
 
-$primary-color: #eec72c;
-$secondary-color: #fff;
+$primary-color: #ffffff;
+$secondary-color: #eec72c;
