--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import './vars.scss';
+
 html {
 	scroll-behavior: smooth;
 }
@@ -21,15 +23,15 @@ body {
 		font-weight: bold;
 		color: $secondary-color;
 
-		@include tablet {
-			font-size: 3.5rem;
-			line-height: 3.5rem;
-		}
+		// @include tablet {
+		// 	font-size: 3.5rem;
+		// 	line-height: 3.5rem;
+		// }
 
-		@include phone {
-			font-size: 3rem;
-			line-height: 3rem;
-		}
+		// @include phone {
+		// 	font-size: 3rem;
+		// 	line-height: 3rem;
+		// }
 	}
 
 	h2 {
@@ -38,15 +40,15 @@ body {
 		font-weight: bold;
 		color: $secondary-color;
 
-		@include tablet {
-			font-size: 2rem;
-			line-height: 2rem;
-		}
+		// @include tablet {
+		// 	font-size: 2rem;
+		// 	line-height: 2rem;
+		// }
 
-		@include phone {
-			font-size: 1.75rem;
-			line-height: 1.75rem;
-		}
+		// @include phone {
+		// 	font-size: 1.75rem;
+		// 	line-height: 1.75rem;
+		// }
 	}
 
 	h3 {
@@ -74,6 +76,7 @@ body {
 		font-weight: bold;
 		outline: none;
 		border: none;
+		color: $primary-color;
 	}
 
 	input {
