--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -1,8 +1,10 @@
+@import '../../../vars.scss';
+
 .button {
 	cursor: pointer;
-	// background-color: $primary-color;
 	border: 2px solid $secondary-color;
 	border-radius: 8px;
+	background-color: Transparent;
 
 	&:hover {
 		transform: scale(1.08);
