fixed LOAD_USER and added some style to the header

--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -5,6 +5,7 @@
 	border: 2px solid $secondary-color;
 	border-radius: 8px;
 	background-color: Transparent;
+	height: 100%;
 
 	&:hover {
 		transform: scale(1.08);
