--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,9 +1,40 @@
 @import '../../../vars.scss';
 
-.header {
-	&__logo-start {
-	}
+.nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	height: 10vh;
 
-	&__logo-end {
+	&__burger {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-around;
+		width: 2rem;
+		height: 2rem;
+	}
+}
+
+.burger {
+	&__line {
+		width: 3rem;
+		height: 0.5rem;
+		background: $secondary-color;
+		border-radius: 10px;
+		transition: all 0.3s linear;
+		position: relative;
+		transform-origin: 1px;
+	}
+}
+
+.user {
+	&__avatar {
+		cursor: pointer;
+		width: 70px;
+		height: 70px;
+		object-fit: cover;
+		border: 2px solid $secondary-color;
+		border-radius: 50%;
 	}
 }
