--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -5,7 +5,7 @@
 	border: 2px solid $secondary-color;
 	border-radius: 8px;
 	background-color: Transparent;
-	height: 100%;
+	height: 30px;
 
 	&:hover {
 		transform: scale(1.08);
