--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -6,33 +6,14 @@
 	align-items: center;
 	width: 100%;
 	height: 10vh;
-
-	&__burger {
-		display: flex;
-		flex-direction: column;
-		justify-content: space-around;
-		width: 2rem;
-		height: 2rem;
-	}
-}
-
-.burger {
-	&__line {
-		width: 3rem;
-		height: 0.5rem;
-		background: $secondary-color;
-		border-radius: 10px;
-		transition: all 0.3s linear;
-		position: relative;
-		transform-origin: 1px;
-	}
+	padding: 1em;
 }
 
 .user {
 	&__avatar {
 		cursor: pointer;
-		width: 70px;
-		height: 70px;
+		width: 60px;
+		height: 60px;
 		object-fit: cover;
 		border: 2px solid $secondary-color;
 		border-radius: 50%;
