--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -7,6 +7,16 @@
 	width: 100%;
 	height: 10vh;
 	padding: 1em;
+
+	&__logo {
+		display: flex;
+		align-items: center;
+	}
+
+	&__user {
+		display: flex;
+		align-items: center;
+	}
 }
 
 .user {
