added NO_USER to reducer & userMenu 50% done

--- a/src/Components/Header/Panel/Panel.scss
+++ b/src/Components/Header/Panel/Panel.scss
@@ -13,6 +13,10 @@
 	align-items: center;
 	transform: translateX(-100%);
 
+	@include desktop {
+		display: none;
+	}
+
 	&--open {
 		background-color: $background-color;
 		transform: translateX(0);
