--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -17,6 +17,12 @@
 	&__logo {
 		display: flex;
 		align-items: center;
+		height: 6rem;
+		width: 10rem;
+		background-image: url('../../assets/images/logo.png');
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: contain;
 	}
 
 	&__user {
