--- a/src/Components/Header/UserMenu/UserMenu.scss
+++ b/src/Components/Header/UserMenu/UserMenu.scss
@@ -2,17 +2,26 @@
 
 .userMenu {
 	position: absolute;
+	width: 7.5em;
+	height: 6em;
 	right: 0;
+	top: 4em;
 	font-size: 1rem;
-	padding: 1rem;
+	padding: 0 1rem;
 	box-shadow: 1px 2px 4px 1px rgba(0, 0, 0, 0.1);
 	background-color: $background-color;
+	border: 1px solid $secondary-color;
 	border-radius: 0.5rem;
 	ul {
 		list-style: none;
 		padding: 0;
 		li {
 			padding: 0.5rem 0;
+			cursor: pointer;
+			transition: color 0.3s;
+		}
+		li:hover {
+			color: $secondary-color;
 		}
 	}
 }
