--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -3,21 +3,26 @@
 .button {
 	cursor: pointer;
 	border: 2px solid $secondary-color;
-	border-radius: 1em;
+	border-radius: 50px;
 	background-color: Transparent;
 	transition: 0.5s;
 	height: 30px;
 	width: 50%;
 	font-weight: normal;
+	padding: 0.9em 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
 	&:hover {
 		background-color: $secondary-color;
 		color: $background-color;
 	}
 
-	&--small {
-	}
-
-	&--large {
+	&-link {
+		width: 100%;
+		height: auto;
+		display: flex;
+		justify-content: center;
 	}
 }
