fixed userMenu, improved Home & Play components

--- a/src/Components/Header/UserMenu/UserMenu.scss
+++ b/src/Components/Header/UserMenu/UserMenu.scss
@@ -23,6 +23,13 @@
 			&:hover {
 				color: $secondary-color;
 			}
+			a {
+				color: inherit;
+				font-family: inherit;
+				font-weight: inherit;
+				font-size: inherit;
+				text-decoration: inherit;
+			}
 		}
 	}
 }
