--- a/src/Views/Home/Home.scss
+++ b/src/Views/Home/Home.scss
@@ -1,12 +1,38 @@
+@import '../../../vars.scss';
+
 .home {
 	padding: 5rem 1rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 
+	&__recent-snaps {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+	}
+
 	&__leaderboards {
 		display: flex;
 		width: 100%;
+	}
+}
+
+.recent-snaps {
+	&__snap {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 50%;
+		border: 1px solid $secondary-color;
+		background-color: #000000;
+
+		img {
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
 	}
 }
 
