--- a/src/Views/Play/Play.scss
+++ b/src/Views/Play/Play.scss
@@ -8,8 +8,48 @@
 }
 
 .snap {
+	&__details {
+		margin-bottom: 1.5%;
+		display: flex;
+		justify-content: space-between;
+		text-align: justify;
+	}
 	&__image {
 		border: 1px solid $secondary-color;
 		background-color: #000000;
+		margin-bottom: 5%;
+
+		img {
+			width: auto;
+			height: auto;
+			max-width: 100%;
+			max-height: 100%;
+		}
+	}
+	&__guess {
+		display: flex;
+		justify-content: center;
+
+		// input[type='text'] {
+		// 	width: 20px;
+		// 	height: 20px;
+		// 	padding-right: 50px;
+		// }
+
+		// button[type='submit'] {
+		// 	margin-left: -50px;
+		// 	height: 20px;
+		// 	width: 5px;
+		// }
+	}
+}
+
+.details {
+	&__separator {
+		display: inline-block;
+		width: 15px;
+		height: 15px;
+		border-radius: 50%;
+		background-color: $secondary-color;
 	}
 }
