--- a/src/Views/Register/Register.scss
+++ b/src/Views/Register/Register.scss
@@ -16,3 +16,17 @@
 		align-items: center;
 	}
 }
+
+.form {
+	&__submit {
+		margin: 2em 0 0 0.5em;
+		width: 12em;
+	}
+}
+
+.redirect {
+	&__button {
+		margin: 2em 0 0 0.5em;
+		width: 12em;
+	}
+}
