--- a/src/Components/Input/Input.scss
+++ b/src/Components/Input/Input.scss
@@ -3,7 +3,7 @@
 .input {
 	margin-left: 2em;
 	padding: 0.3rem;
-	color: $primary-color;
+	color: $secondary-color;
 	border: 1px solid $secondary-color;
 	box-shadow: 0 0 1px 0px white inset, 0 0 1px 0px $secondary-color;
 	border-radius: 50px;
@@ -12,8 +12,4 @@
 	transition: background-color 0.5s ease-in-out;
 	opacity: 0.8;
 	padding-left: 1em;
-
-	&:focus {
-		background-color: $secondary-color;
-	}
 }
