--- a/src/Views/Play/Play.scss
+++ b/src/Views/Play/Play.scss
@@ -108,15 +108,43 @@
 				outline: none;
 			}
 		}
+		&--solved {
+			display: flex;
+			align-items: center;
+		}
 	}
 
 	&__next {
+		cursor: pointer;
+		border: 2px solid $secondary-color;
+		border-radius: 50px;
+		background-color: Transparent;
+		transition: 0.5s;
+		height: 30px;
+		padding: 0.9em 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		margin-left: 0.5em;
 		width: 4em;
+
+		&:hover {
+			background-color: $secondary-color;
+			color: $background-color;
+		}
 	}
 }
 
 .guess {
+	&__answer {
+		&--wrong {
+			transition: 0.5s;
+			border: 2px solid red !important;
+		}
+		&--right {
+			border: 2px solid #7aee2c !important;
+		}
+	}
 	&__verify {
 		background-color: transparent;
 		cursor: pointer;
