--- a/src/App.scss
+++ b/src/App.scss
@@ -24,6 +24,13 @@ body {
 	background-color: $background-color;
 	color: $primary-color;
 
+	main {
+		padding: 5rem 1rem;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+	}
+
 	h1 {
 		font-size: 2.5rem;
 		line-height: 4.5rem;
