added error hanlding on Login and fixed footer

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,6 +29,10 @@ body {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+
+		@include desktop {
+			padding: 5rem;
+		}
 	}
 
 	h1 {
